--- a/Experimento_1/templates/concesionario_list.html
+++ b/Experimento_1/templates/concesionario_list.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load verbose_names %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -64,19 +65,33 @@
       {% for concesionario in concesionarios %}
           <div class="col-sm-6">
           <div class="card">
-              {% for field, value in concesionario.fields.items %}
+              {% for field, value in concesionario.items %}
                   {% if field == "nombre" %}
                         <h3 class="card-header"><strong>{{ value }}</strong></h3>
+                      {% elif field == 'id' %}
+                       <form action="../editarConcesionario/" method="post" id="form_edit{{ concesionario.id }}">
+                            {% csrf_token %}
+                           <input name="id" id="id" hidden value="{{ concesionario.id}}"/>
+                        </form>
+                      </form>
+                      <form action="../eliminarConcesionario/" method="post" id="form_delete{{ concesionario.id }}">
+                            {% csrf_token %}
+                           <input name="id" id="id" hidden value="{{ concesionario.id}}"/>
+                        </form>
                       {% else %}
-                      <li class="list-group-item"><p class="card-text"><strong>{{ field|title}}: </strong> {{ value }}</p></li>
+                      <li class="list-group-item"><p class="card-text"><strong>{% get_verbose_field_name 'concesionario' field %}: </strong> {{ value }}</p></li>
                   {% endif %}
                   {% endfor %}
-          </ul>
+          <div class="card-footer" style="text-align: center">
+              <button form="form_edit{{ concesionario.id }}" type="submit" class="btn btn-link">Editar</button>
+              <button form="form_delete{{ concesionario.id }}" type="submit" class="btn btn-link">Eliminar</button>
+            </div>
           </div>
           </div>
       {% endfor %}
       </div>
   <br>
+  {% if concesionarios %}
 <div class="pagination">
     <span class="step-links">
         {% if concesionarios.has_previous %}
@@ -92,6 +107,9 @@
         {% endif %}
     </span>
 </div>
+      {% else %}
+      <p> No hay Concesionarios registrados en el sistema.</p>
+  {% endif %}
   <footer class="footer">
         <p>&copy; Universidad de los Andes - MISO-4206 - Grupo 4</p>
       </footer>
